examples/neg/invalid_extern_body.effekt
extern def jsPrintThree(): Unit = 1

def main() = jsPrintThree()
